* Adapted sponsored search results per client's requirement * Fixed annoying layout problem when loading the page while not   logged in

--- a/apache/media/css/layout.css
+++ b/apache/media/css/layout.css
@@ -232,7 +232,7 @@ form.inline p { margin-bottom:0; }
 .toplink {color: #CCCCCC;}
 #login-form { padding: 0 10px 0 0; float: left;}
 input.login_input {margin: 3px; width: 150px; }
-div#login {padding-left: 8px; float: left; width: 900px;}
+div#login {padding-left: 8px; float: left; width: 900px; height: 31px;}
 
 #nav-user ul {margin-top: 4px; margin-right: 0;}
 #nav-user ul li {float: left; color: #fff; text-shadow: #151516 0 1px 0;}
